feat(symfony-app:docker-hybrid): add MailCatcher

--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -32,5 +32,7 @@ system:
         # @option {"label": "Redis version"}
         # @schema {"enum": [null, "*"]}
         version: ~
-        # @schema {"type": ["object", "array"]}
-        config: {}
+    mailcatcher:
+        # @option {"label": "Mailcatcher version"}
+        # @schema {"enum": [null, "*"]}
+        version: ~
