feat(symfony-app:docker-hybrid): add RabbitMQ support

--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -36,3 +36,7 @@ system:
         # @option {"label": "Mailcatcher version"}
         # @schema {"enum": [null, "*"]}
         version: ~
+    rabbitmq:
+        # @option {"label": "RabbitMQ version"}
+        # @schema {"enum": [null, "*"]}
+        version: ~
