--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -22,9 +22,9 @@ system:
         #     }
         # }
         configs: []
-    mysql:
-        # @option {"label": "MySQL version"}
-        # @schema {"enum": [null, 5.7, 8, "8.0"]}
+    mariadb:
+        # @option {"label": "MariaDB version"}
+        # @schema {"enum": [null, 10.3, 10.4, 10.5, 10.6]}
         version: ~
         # @schema {"type": ["string", "null"]}
         init: ~
