--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -36,3 +36,7 @@ system:
         # @option {"label": "Mailcatcher version"}
         # @schema {"enum": [null, "*"]}
         version: ~
+    dynamodb:
+        # @option {"label": "Dynamodb version"}
+        # @schema {"enum": [null, "*"]}
+        version: ~
