feat(docker): update manala tpl fix typo

--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -43,7 +43,7 @@ system:
         # @schema {"enum": [null, "*"]}
         version: ~
         # @option {"label": "Mailcatcher ports"}
-        # @schema {"type": ["string"]}
+        # @schema {"type": ["array"]}
         ports: ~
     phpmyadmin:
         # @option {"label": "PhpMyAdmin ports"}
