feat(symfony-app.docker-hybrid): add a way to add additional configuration for MariaDB

--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -28,6 +28,8 @@ system:
         version: ~
         # @schema {"type": ["string", "null"]}
         init: ~
+        # @schema {"type": ["string", "null"]}
+        additional_config:
     redis:
         # @option {"label": "Redis version"}
         # @schema {"enum": [null, "*"]}
