feat(symfony-app.docker-hybrid): add Meilisearch support

--- a/symfony-app.docker-hybrid/.manala.yaml
+++ b/symfony-app.docker-hybrid/.manala.yaml
@@ -38,3 +38,7 @@ system:
         # @option {"label": "Mailcatcher version"}
         # @schema {"enum": [null, "*"]}
         version: ~
+    meilisearch:
+        # @option {"label": "Meilisearch version"}
+        # @schema {"enum": [null, "*"]}
+        version: ~
